[WIP] Fixed small issue